css/mediaquery.css
/* TABLET VIEW */
@media screen and (max-width: 1087px) {

    #recent, #made-for, #popular {
        display: flex;
        flex-flow: row wrap;
        justify-content: flex-start;
    }    

    .album {
        min-width: 180px;
        padding: 30px 30px 30px 0;
        width: calc(100% / 4);
    }
    
}

/* SMALL TABLET VIEW */
@media screen and (max-width: 958px) {

    #recent, #made-for, #popular {
        display: flex;
        flex-flow: row wrap;
        justify-content: space-around;
    }    

    .album {
        min-width: 250px;
        padding: 30px 30px 30px 0;
        width: calc(100% / 4);
    }

    /* foot-right section */
    #foot-right .dxicons i{
        margin: 5px;
    }
    

}

/* SMALL MOBILE LANDSCAPE VIEW */
@media screen and (max-width: 726px) {

    #recent, #made-for, #popular {
        display: flex;
        flex-flow: row wrap;
        justify-content: flex-start;
    }    

    .album {
        min-width: 150px;
        width: calc(100% / 2);
        padding: 30px 30px 30px 0;
    }
    
}

/* SMALL MOBILE VIEW */
@media screen and (max-width: 536px) {
    /* HEADER */
    header {
        width: 70px;
        min-height: 370px;
    }

    #logo-full img{
        display: none;
    }

    #logo-small, .general {
        width: 50%;
        margin: 0 auto;
    }

    #logo-small img {
        padding: 20px 0;
        display: block;
        position: relative;
        z-index:2;    
    }

    .general img {
        padding: 20px 0;
        margin: 0;
    }
    #app-nav a {
        padding: 0;
        border-bottom: 3px solid transparent;
    }

    #app-nav a:focus {
        border-bottom: 3px solid #C0FE5C;
        border-left: 3px solid transparent;
    }

    .general span, .play-items,
    .list-container, #profile span, hr{
        display: none;
    }

    #profile {
        width: 70px;
        text-align: center;
        display: flex;
        flex-flow: column wrap;
    }

    #profile img {
        width: 30px;
        height: 30px;
    }

    div.logo-profile {
        margin-top: 20px;
        width: 40px;
        height: 40px;
    }

    /* MAIN */
    main {
        width: calc(100% - 70px);
    }

    #main-btn {
        left: 70px;
        width: calc(100% - 70px);
        height: 80px;
        background-color: rgba( 10, 10, 10, 0.8);
    }

        /* section button */
    .btn {
        background-color: transparent;
        color: #fff;
        padding: 10px 50px;
        border-radius: 20px;
        border: 2px solid #fff;
        float: right;
        margin: 15px 30px 0 0;
        transform: scale(.7);
    }

    .btn:hover {
        transform: scale(.9);
    }
    
        /* section libraries */
    #libraries a {
        font-size: .7rem;
        font-weight: 600;
        padding: 7px 1px;
    }

        /* section recently played */
    .center {
        width: 90%;
        margin: 0 auto;
    }

    #recent, #made-for, #popular {
        display: flex;
        flex-flow: row wrap;
        justify-content: space-around;
    }    

    .album {
        min-width: 140px;
        width: calc(100% / 2);
        padding: 0;
        margin: 10px 0;
    }

    .cover {
        width: 130px;
        height: 130px;
    }

    /* FOOTER */
        /* left section */
    #foot-left {
        min-width: 110px;
    }

    #foot-left img {
        display: none;
    }   
    
    /* right section */
    #foot-right {
        min-width: 110px;
    }

    #foot-right .dxicons i{
        font-size: .8rem;
        margin: 3px;
    }

}

